# poetry-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.html  index.html  package-lock.json  package.json  push-to-docker.sh  setupTests.ts  test-space.css  vite.config.ts
app/: package-lock.json  package.json
app/src/: App.tsx  constants.ts  index.css
app/src/components/: Footer.tsx  Header.tsx  Modal.tsx
app/src/components/message_components/: ChatMessage.tsx
server/: .gitignore  Cargo.toml
server/src/: config.rs  handlers.rs  main.rs  openai.rs  schemas.rs  services.rs
server/src/common/: errors.rs  types.rs
server/src/utils/: config.rs  mod.rs  openai.rs
src/: App.test.tsx  App.tsx  constants.ts  index.css
src/components/: Chat.tsx  Container.tsx  Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  Messages.test.tsx  Messages.tsx  Modal.test.tsx  Modal.tsx
src/components/message_components/: ChatMessage.tsx  EmptyState.tsx  LoadingBubblesMessage.tsx
